--- a/Trivia/app/build.gradle
+++ b/Trivia/app/build.gradle
@@ -26,7 +26,7 @@ android {
         enabled = true
     }
     defaultConfig {
-        applicationId 'com.example.android.navigation'
+        applicationId 'at.htl.trivia'
         minSdkVersion 19
         targetSdkVersion 28
         vectorDrawables.useSupportLibrary = true
