--- a/Trivia/app/src/main/AndroidManifest.xml
+++ b/Trivia/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.navigation">
+    package="at.htl.trivia">
 
     <application
         android:allowBackup="true"
