--- a/DessertPusher/app/build.gradle
+++ b/DessertPusher/app/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.android.dessertpusher"
+        applicationId "at.htl.dessertpusher"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -44,4 +44,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
