--- a/DessertPusher/app/src/main/AndroidManifest.xml
+++ b/DessertPusher/app/src/main/AndroidManifest.xml
@@ -15,16 +15,18 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.dessertpusher">
+    package="at.htl.dessertpusher">
 
     <application
+        android:name=".PusherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_dessert_pusher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_dessert_pusher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,5 +34,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
