--- a/GuessTheWord/app/build.gradle
+++ b/GuessTheWord/app/build.gradle
@@ -23,7 +23,7 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.android.guesstheword"
+        applicationId "at.htl.guesstheword"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -58,4 +58,6 @@ dependencies {
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
+
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 }
