--- a/GuessTheWord/app/src/main/AndroidManifest.xml
+++ b/GuessTheWord/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.android.guesstheword">
+    package="at.htl.guesstheword">
 
     <application
         android:allowBackup="true"
