--- a/MarsRealEstate/app/src/main/AndroidManifest.xml
+++ b/MarsRealEstate/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
   ~
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.marsrealestate">
+    package="at.htl.marsrealestate">
 
     <application
         android:allowBackup="true"
@@ -26,7 +26,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.android.marsrealestate.MainActivity">
+        <activity android:name="at.htl.marsrealestate.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
