--- a/DevBytes/app/build.gradle
+++ b/DevBytes/app/build.gradle
@@ -24,7 +24,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.android.devbyteviewer"
+        applicationId "at.htl.devbyteviewer"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
